# dbt-diagnostics

./: .gitignore  AGENTS.md  BUILD_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
dbt_diagnostics/: CLASSIFIER_FIX_PLAN.md  CLASSIFIER_FIX_PROMPT.md  CODE_REVIEW.md  __init__.py  __main__.py  colors.py  config.yml  demo.py  discover.py  grouping.py  main.py  models.py  renderer.py  root_cause.py
dbt_diagnostics/classifiers/: __init__.py  base.py  compilation_error.py  contract_violation.py  data_error.py  registry.py  runtime_error.py  schema_change_error.py  test_failure.py  timeout_error.py
dbt_diagnostics/enrichers/: __init__.py  connection.py  enrich.py  grants.py  params.py  query_history.py  run_identity.py  schema_inspector.py
dbt_diagnostics/fixtures/: compilation_errors.json  contract_type_mismatch.json  data_errors.json  manifest_compilation.json  manifest_minimal.json  manifest_previous.json  manifest_runtime.json  manifest_test_failures.json  real_compilation_ref_not_found.json  real_compilation_ref_not_found_manifest.json  real_contract_violation_extra_column.json  real_contract_violation_extra_column_manifest.json  real_diagnostic_output.txt  real_division_by_zero_100035.json  real_division_by_zero_100035_manifest.json  real_invalid_identifier_000904.json  real_invalid_identifier_000904_manifest.json  real_invalid_identifier_lateral_000904.json  real_invalid_identifier_lateral_000904_manifest.json  real_manifest_staging_errors.json  real_numeric_overflow_100132.json  runtime_errors.json  (+15 more)
docs/: DESIGN_LIVE_VERIFICATION.md  HANDOFF_PROMPT.md  HANDOFF_PROMPT_2.md  LINEAGE_TRAIL_PLAN.md  PROGRESS_LOG.md
(+52 files in other folders)
