[project]
name = "dbt-diagnostics"
version = "0.5.0"
description = "Lineage-aware error tracer for dbt projects on Snowflake. Snowflake-only: non-Snowflake errors will be classified as 'unknown'."
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=26.0,<28.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
live = [
    "snowflake-connector-python>=3.7.0",
    "cryptography>=41.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dbt-diagnostics = "dbt_diagnostics.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbt_diagnostics*"]

[tool.setuptools.package-data]
dbt_diagnostics = ["templates/**/*.j2", "fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
